--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -82,7 +82,7 @@ $color-background: #edffe8;
     min-height: 100%;
     min-width: 225px;
     font-size: 36px;
-    color: gray;
+    color: black;
     padding-top: 40px;
     background-color: $color-background;
     font-family: 'Cabin', sans-serif;
