--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -14,6 +14,12 @@
 }
 @media only screen and (max-width: 1024px) {
     .cardStyle {
+        width: 45%;
+        height: 460px;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .cardStyle {
         width: 100%;
         height: 0%;
     }
@@ -35,7 +41,14 @@
 }
 @media only screen and (max-width: 1024px) {
     .cardStyleNoImage {
+        width: 45%;
+        height: 460px;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .cardStyleNoImage {
         width: 100%;
+        height: 0%;
     }
 }
 
@@ -64,19 +77,35 @@
 }
 .tagBox {
     width: 100%;
-    height: 100px;
+    height: 110px;
 }
 @media only screen and (max-width: 1024px) {
+    .imageCard {
+        width: 36%;
+        height: 200px;
+    }
+    .tagBox {
+        width: 100%;
+        height: 100px;
+    }
+    .cardName {
+        font-size: 125%;
+        text-align: center;
+        padding-bottom: 25px;
+        margin: 1%;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .imageCard {
+        width: 80%;
+        height: 200px;
+    }
     .tagBox {
         height: 0%;
     }
     .cardName {
         height: 0%;
     }
-    .imageCard {
-        width: 36%;
-        height: 200px;
-}
 }
 .tagBoxNoImage {
     width: 100%;
@@ -85,6 +114,7 @@
 }
 .tag{
     color: white;
+    max-width: 160px;
     font-size: 70%;
     border-radius: 25px;
     margin: 1%;
