--- a/frontend/src/styles/results.scss
+++ b/frontend/src/styles/results.scss
@@ -81,9 +81,9 @@ $color-background: #edffe8;
     background: white;
     min-height: 100%;
     min-width: 225px;
-    font-size: 30px;
-    color: gray;
-    border-radius: 25px;
+    font-size: 36px;
+    color: black;
+    padding-top: 40px;
     background-color: $color-background;
     font-family: 'Cabin', sans-serif;
 }
