--- a/frontend/src/styles/searchpage.scss
+++ b/frontend/src/styles/searchpage.scss
@@ -53,7 +53,7 @@ $color-background: #edffe8;
 
 .homeText{
   font-size: 175%;
-  padding-top: 5%;
+  padding-top: 60px;
   padding-left: 5%;
   padding-right: 5%;
   padding-bottom: 1%;
