--- a/frontend/src/styles/description.scss
+++ b/frontend/src/styles/description.scss
@@ -4,7 +4,6 @@ $backcolor: #edffe8;
 .white-box{
         width: 100%;
         border-radius: 25px;
-        border: 2px solid green;
         padding-bottom: 2%;
         padding-top: 2%;
         background: white;
@@ -13,6 +12,7 @@ $backcolor: #edffe8;
         margin:0px auto;
         display: table;
         margin-top: 5%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .description-cardName{
