angad merge pls (#121)
* swap position of tags and description on description page

* styling

* more styling

* quotes around search term

* i hate css

* angad theres weird styling things with heights i think i fixed it sorry

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -60,11 +60,14 @@
     text-align: center;
     padding-bottom: 25px;
     margin: 1%;
+    height: 50px;
 }
 .cardNameNoImage {
     font-size: 150%;
     text-align: center;
-    height: 5px;
+    padding-bottom: 5px;
+    margin: 1%;
+    height: 50px;
 }
 .cardDescription {
     height: .1%;
@@ -108,7 +111,7 @@
 }
 .tagBoxNoImage {
     width: 100%;
-    height: 100px;
+    height: 110px;
     margin-bottom: 1%;
 }
 .tag{
